# OmniMailbox

./: .editorconfig  .gitignore  API_REFERENCE.md  BENCHMARKS.md  CHANGELOG.md  CMakeLists.txt  DESIGN_DECISIONS.md  LICENSE  NOTE_Backpressure_and_Queue_Saturation.md  NOTE_TSAN.md  OmniMailbox_Design_Specification.md  README.md  benchmark_results.json  benchmark_results_formatted.json
.github/: copilot-instructions.md
bench/: throughput_latency.cpp
examples/: backpressure_demo.cpp  basic_usage.cpp
include/omni/: consumer_handle.hpp  mailbox.hpp  mailbox_broker.hpp  producer_handle.hpp
include/omni/detail/: config.hpp  queue_helpers.hpp  spsc_queue.hpp  wait_strategy.hpp
schemas/: example_message.fbs
src/: broker.cpp  consumer_handle.cpp  producer_handle.cpp
tests/integration/: test_end_to_end.cpp
tests/stress/: test_concurrent_channels.cpp
tests/unit/: test_broker.cpp  test_config.cpp  test_consumer_handle.cpp  test_handles.cpp  test_spsc_queue.cpp
